[regression] [WebView] Load single page application from jar

XMLWordPrintable

    • web
    • x86
    • windows_8

        FULL PRODUCT VERSION :
        java version "1.8.0_60"
        Java(TM) SE Runtime Environment (build 1.8.0_60-b27)
        Java HotSpot(TM) Client VM (build 25.60-b23, mixed mode, sharing)

        ADDITIONAL OS VERSION INFORMATION :
        Microsoft Windows [Version 6.3.9600]

        A DESCRIPTION OF THE PROBLEM :
        Our java application uses JavaFX’s WebView to load a single page application which should be available while the user is offline.

        The single page application will be delivered by a jar file. This case works without any problem by using JDK8u51, but something changed in case of JDK8u60.
        Our relative referenced javascript files (inside the same package) will not be loaded by the WebView and therefore our application doesn’t work.

        Eclipse project which simulates this behaviour:
        https://drive.google.com/file/d/0B7P_rknS1TWxVFNHRURwZnpkMDA/view?usp=sharing

        Result JDK 8u51:
        https://drive.google.com/file/d/0B7P_rknS1TWxaVo5Y1RoZHlVdzg/view?usp=sharing

        Result JDK 8u61
        https://drive.google.com/file/d/0B7P_rknS1TWxVUVncFBfX0thYjQ/view?usp=sharing

        REGRESSION. Last worked in version 8u51

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Eclipse project which simulates this behaviour:
        https://drive.google.com/file/d/0B7P_rknS1TWxVFNHRURwZnpkMDA/view?usp=sharing


        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        Result JDK 8u51:
        https://drive.google.com/file/d/0B7P_rknS1TWxaVo5Y1RoZHlVdzg/view?usp=sharing
        ACTUAL -
        Result JDK 8u61
        https://drive.google.com/file/d/0B7P_rknS1TWxVUVncFBfX0thYjQ/view?usp=sharing

        Images and Javascript will not be loaded


        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        Eclipse project which simulates this behaviour:
        https://drive.google.com/file/d/0B7P_rknS1TWxVFNHRURwZnpkMDA/view?usp=sharing

        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        No workaround

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: