8136466: [regression] [WebView] Load single page application from jar

Reviewed-by: azvegint, kcr